# vkw

./: .gitignore  CMakeLists.txt  LICENSE  LibraryVersion.inc.in  README.MD
cmake/: find_dependencies.cmake  find_dependencies_private.cmake  generate_export_configuration.cmake  generate_headers.cmake  vkwConfig.cmake
include/vkw/: Allocation.hpp  Buffer.hpp  CommandBuffer.hpp  CommandPool.hpp  CommandRecorder.hpp  Containers.hpp  DescriptorPool.hpp  DescriptorSet.hpp  Device.hpp  Exception.hpp  Extensions.hpp  Fence.hpp  FrameBuffer.hpp  HostAllocator.hpp  Image.hpp  Instance.hpp  Layers.hpp  Library.hpp  PhysicalDevice.hpp  Pipeline.hpp  PipelineCache.hpp  Query.hpp  Queue.hpp  ReferenceGuard.hpp  RenderPass.hpp  Runtime.h  SPIRVModule.hpp  Sampler.hpp  Semaphore.hpp  Shader.hpp  StagingBuffer.hpp  Surface.hpp  SwapChain.hpp  UniformBuffer.hpp  Validation.hpp  VertexBuffer.hpp  Vulkan.hpp
scripts/: generate_headers.py  generate_type_constructors.py
source/: CMakeLists.txt  CommandBuffer.cpp  RenderPass.cpp  Runtime.cpp
source/loader/: CMakeLists.txt
test/examples/: CMakeLists.txt
test/examples/hello_world/: main.cpp
